# datapoke

./: .gitignore  DEV NOTES.md  LICENSE  README.md  pyproject.toml  startup.py  tox.ini
.github/workflows/: ci.yml
.tox/py39-pandas1/: .tox-info.json
.tox/py39-pandas2/: .tox-info.json
Test data/: test generator.py
Test data/load tests/: MixedTypeDataTable.xlsx  cp1252_encoded.csv  dtype_nulltest.csv  invalid_encoding.csv  latin1_encoded.csv  totally_invalid_encoding.csv  utf16_encoded.csv  utf8_sig_break_utf8.csv  utf8_sig_encoded.csv
datapoke/: __init__.py  enums.py  frame.py  old_frame.py  series.py  startup.py  utils.py
docs/source/: api_reference.rst  conf.py  index.rst  usage.rst
tests/: test_frame.py
